<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AEEAFD2F"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btCentimetros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/btCentometros"
                    app:layout_constraintEnd_toEndOf="@+id/etValor"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/etValor"
                    app:layout_constraintTop_toBottomOf="@+id/etValor" />

                <TextView
                    android:id="@+id/tvResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="96dp"
                    android:text="@string/tvResultado"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/btCentimetros"
                    app:layout_constraintStart_toStartOf="@+id/btPulgadas"
                    app:layout_constraintTop_toBottomOf="@+id/etValor" />

                <EditText
                    android:id="@+id/etValor"
                    android:layout_width="296dp"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/tvHintPulgada"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColorHint="#757575"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.065" />

                <Button
                    android:id="@+id/btPulgadas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/tbPulgadas"
                    app:layout_constraintEnd_toEndOf="@+id/etValor"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etValor"
                    app:layout_constraintTop_toBottomOf="@+id/etValor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="184dp">

                <TextView
                    android:id="@+id/tvResMoneda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="84dp"
                    android:text="@string/tvResultado"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/etMoneda"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="@+id/etMoneda"
                    app:layout_constraintTop_toBottomOf="@+id/etMoneda" />

                <EditText
                    android:id="@+id/etMoneda"
                    android:layout_width="296dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="4dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/tvHintMoneda"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColorHint="#757575"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.088" />

                <Button
                    android:id="@+id/btDolar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/btDolar"
                    app:layout_constraintEnd_toEndOf="@+id/etMoneda"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etMoneda"
                    app:layout_constraintTop_toBottomOf="@+id/etMoneda" />

                <Button
                    android:id="@+id/btEuro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/btEuro"
                    app:layout_constraintEnd_toEndOf="@+id/etMoneda"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/etMoneda"
                    app:layout_constraintTop_toBottomOf="@+id/etMoneda" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="181dp">

                <TextView
                    android:id="@+id/tvResGiga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/tvResultado"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/etGigas"
                    app:layout_constraintStart_toStartOf="@+id/etGigas"
                    app:layout_constraintTop_toBottomOf="@+id/etGigas" />

                <Button
                    android:id="@+id/btGiga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/btGigas"
                    app:layout_constraintEnd_toEndOf="@+id/etGigas"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etGigas"
                    app:layout_constraintTop_toBottomOf="@+id/etGigas" />

                <Button
                    android:id="@+id/btTera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/btTeras"
                    app:layout_constraintEnd_toEndOf="@+id/etGigas"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/etGigas"
                    app:layout_constraintTop_toBottomOf="@+id/etGigas" />

                <EditText
                    android:id="@+id/etGigas"
                    android:layout_width="296dp"
                    android:layout_height="48dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/tvHintGigas"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:textColorHint="#757575"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.15" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvInfo"
        android:textColor="#0000ff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvError"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>